# DFT-RTM

./: Dockerfile  Makefile  main.f90  mdle_adds.f90  mdle_io_utils.f90  meson.build  shell.nix
app/: main.f90
buildconfig/: .gitignore  Makefile  imagem-ref.dir  run.sh  teste.sh
nix/: sources.json
src/: main.f90  mdle_adds.f90  mdle_io_utils.f90
test/: test.f90  test_atenuation.f90  test_laplace.f90
